# sundials

./: .project  CMakeLists.txt  Makefile.in  acinclude.m4  configure
config/: FindMPI.cmake  FortranMangling.cmake  SundialsFortran.cmake  SundialsMPIC.cmake  SundialsMPIF.cmake  cust_general.m4
examples/cvode/fcmix_parallel/: CMakeLists.txt
examples/cvode/fcmix_serial/: CMakeLists.txt
examples/cvode/parallel/: CMakeLists.txt
examples/cvode/serial/: CMakeLists.txt
examples/cvodes/parallel/: CMakeLists.txt
examples/cvodes/serial/: CMakeLists.txt
examples/ida/fcmix_parallel/: CMakeLists.txt
examples/ida/fcmix_serial/: CMakeLists.txt
examples/ida/parallel/: CMakeLists.txt
examples/ida/serial/: CMakeLists.txt
examples/idas/parallel/: CMakeLists.txt
examples/idas/serial/: CMakeLists.txt
examples/kinsol/fcmix_parallel/: CMakeLists.txt
examples/kinsol/fcmix_serial/: CMakeLists.txt
examples/kinsol/parallel/: CMakeLists.txt
examples/kinsol/serial/: CMakeLists.txt
examples/templates/: cmakelists_parallel_C_ex.in  cmakelists_parallel_F77_ex.in  cmakelists_serial_C_ex.in  cmakelists_serial_F77_ex.in
include/sundials/: sundials_config.in
src/cvode/: CMakeLists.txt  cvode.c
src/cvode/fcmix/: CMakeLists.txt
src/cvodes/: CMakeLists.txt  cvodes.c
src/ida/: CMakeLists.txt  ida.c
src/ida/fcmix/: CMakeLists.txt
src/idas/: CMakeLists.txt  idas.c
src/kinsol/: CMakeLists.txt  kinsol.c
src/kinsol/fcmix/: CMakeLists.txt
src/nvec_par/: CMakeLists.txt
src/nvec_ser/: CMakeLists.txt
src/sundials/: CMakeLists.txt
